// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  aria-live="polite"
  className="NotificationItem NotificationItem--success"
  data-intent="success"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    className="NotificationItem__intent"
  >
    success
  </div>
  <div
    aria-hidden="true"
    className="NotificationItem__icon"
  >
    <Icon
      color="white"
      icon="CheckCircle"
      size="small"
      testId="cf-ui-icon"
    />
  </div>
  <div
    className="NotificationItem__text"
  >
    Notification text
  </div>
  <IconButton
    buttonType="white"
    className="NotificationItem__dismiss"
    hasDropdownCaret={false}
    iconProps={
      Object {
        "icon": "Close",
      }
    }
    isDisabled={false}
    label="Dismiss"
    onClick={[Function]}
    testId="cf-ui-notification-close"
  />
</div>
`;

exports[`renders the component with "error" intent 1`] = `
<div
  aria-live="assertive"
  className="NotificationItem NotificationItem--error"
  data-intent="error"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    className="NotificationItem__intent"
  >
    error
  </div>
  <div
    aria-hidden="true"
    className="NotificationItem__icon"
  >
    <Icon
      color="white"
      icon="Warning"
      size="small"
      testId="cf-ui-icon"
    />
  </div>
  <div
    className="NotificationItem__text"
  >
    Notification text
  </div>
  <IconButton
    buttonType="white"
    className="NotificationItem__dismiss"
    hasDropdownCaret={false}
    iconProps={
      Object {
        "icon": "Close",
      }
    }
    isDisabled={false}
    label="Dismiss"
    onClick={[Function]}
    testId="cf-ui-notification-close"
  />
</div>
`;

exports[`renders the component with "warning" intent 1`] = `
<div
  aria-live="assertive"
  className="NotificationItem NotificationItem--warning"
  data-intent="warning"
  data-test-id="cf-ui-notification"
  role="alert"
>
  <div
    className="NotificationItem__intent"
  >
    warning
  </div>
  <div
    aria-hidden="true"
    className="NotificationItem__icon"
  >
    <Icon
      color="white"
      icon="Warning"
      size="small"
      testId="cf-ui-icon"
    />
  </div>
  <div
    className="NotificationItem__text"
  >
    Notification text
  </div>
  <IconButton
    buttonType="white"
    className="NotificationItem__dismiss"
    hasDropdownCaret={false}
    iconProps={
      Object {
        "icon": "Close",
      }
    }
    isDisabled={false}
    label="Dismiss"
    onClick={[Function]}
    testId="cf-ui-notification-close"
  />
</div>
`;
